# ascii-engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  build.ninja  makefile-use-ninja.patch  rules.ninja
ascii-engine/: CMakeLists.txt  stub.cc
ascii-engine/display/: CMakeLists.txt  display.cc  display.hh  output.hh  renderable.cc  renderable.hh  terminal_output.cc  terminal_output.hh
ascii-engine/render/: CMakeLists.txt  char_matrix.cc  char_matrix.hh  line_extractor.cc  line_extractor.hh  line_separator.cc  line_separator.hh  matrix_renderer.cc  matrix_renderer.hh  renderable.cc  renderable.hh  renderer.cc  renderer.hh
ci/: fix_gcc_symlinks.sh  fix_symlinks.sh  install.sh  install_gcc5.sh  install_lcov.sh  install_lcov111.sh  install_ninja.sh  install_to_custom_path.sh  upload_coverage.sh
cmake/: code_coverage.cmake  configure_gtest.cmake  configure_test_suite.cmake  gtest_add_tests.cmake  gtest_test_exec.cmake
lib/: CMakeLists.txt
lib/curses_wrapper/: CMakeLists.txt  curses_wrapper.cc  curses_wrapper.hh
lib/terminal/: CMakeLists.txt  curses_terminal.cc  curses_terminal.hh  curses_wrapper.cc  curses_wrapper.hh  terminal.hh  terminal_interface.hh
test/: CMakeLists.txt
test/ascii-engine/render/: CMakeLists.txt  test_renderable.cc
test/unit/: CMakeLists.txt
test/unit/display/: CMakeLists.txt  mocks.hh  test_display.cc  test_terminal_output.cc
test/unit/render/: CMakeLists.txt  test_matrix_renderer.cc  test_renderable.cc  test_renderer.cc
